Solved. Worked with flex-wrap:wrap. It required width of flex items in a container. Applied flex-shrink:0 to prevent element from shrinking.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -8,6 +8,11 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  display:flex;
+  align-items:center;
+  padding-left:10px;
 }
 
 .footer {
@@ -19,10 +24,88 @@ body {
 .sidebar {
   width: 300px;
   background: royalblue;
+  
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+/*SOLUTION*/
+
+body {
+display:flex;
+flex-direction:column;
+}
+
+.content {
+  display:flex;
+  flex:1 1 auto;
+  width:80%;
+  justify-content:space-between;
+  flex-wrap:wrap;
+  width:80%;
+ 
+}
+
+.section {
+  display:flex;
+  flex:1;
+  justify-content:flex-start;
+  gap:10px;
+  width:600px;
+  flex-wrap:wrap;
+ 
+}
+
+
+
+
+.card {
+  display:flex;
+  background-color:white;
+  height:280px;
+  width:300px;
+  padding:10px;
+  margin-top:40px;
+  
+}
+
+.footer {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+
+ul {
+  list-style-type:none; 
+  padding-left:10px;
+  
+  
+}
+
+li  {
+  margin-bottom:10px;
+}
+
+a {
+
+  text-decoration-line:none;
+  color:white;;
+  width:24px;
+  font-size: 24px;
+  
+  
+  
+}
+
+.sidebar {
+  display:flex;
+  width:300px;
+  flex-shrink:0;
+ 
+  
 }
